added method MakeProduct
