# app/Http/Controllers/ProductsController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers;
 
 use App\Http\Requests\Products\CreateProductsRequest;
+use App\Http\Requests\Products\MakeProductsRequest;
 use App\Http\Requests\Products\UpdateProductsRequest;
 use App\Models\Nbu;
 use App\Models\Product;
@@ -98,7 +99,7 @@ class ProductsController extends Controller
      * @bodyParam caterogy_id integer nullable The id of the caterogy. Example: 1
      * @bodyParam name string nullable The name of the product. Example: Product 1
      * @bodyParam price float nullable The price of the product. Example: 100
-     * @bodyParam count integer nullable The count of the product. Example: 100
+     * @bodyParam count float nullable The count of the product. Example: 100
      * @bodyParam type_id integer nullable The id of the type. Example: 1
      * @bodyParam is_active boolean nullable The status of the product. Example: true
      *  
@@ -130,6 +131,75 @@ class ProductsController extends Controller
             DB::commit();
 
             return $this->success('Product updated successfully', 200);
+        } catch (\Exception $e) {
+            return $this->log($e);
+        }
+    }
+
+
+    /**
+     * @group Products
+     * 
+     * Make product
+     * 
+     * @bodyParam product_id integer required The id of the product. Example: 1
+     * @bodyParam count float required The count of the product. Example: 100
+     * @bodyParam materials string required The materials of the product. Example: 1,2,3
+     * @bodyParam values string required The values of the product. Example: 1,2,3
+     * 
+     * @param MakeProductsRequest $request
+     * @return JsonResponse
+     */
+
+    public function MakeProduct(MakeProductsRequest $request): JsonResponse
+    {
+        try {
+            $data = $request->validated();
+
+            $product = Product::find($data['product_id']);
+
+            // parse materials
+            $materials = explode(',', $data['materials']);
+            $values = explode(',', $data['values']);
+
+            DB::beginTransaction();
+
+            $i = 0;
+            foreach ($materials as $key => $material) {
+
+                // set break
+                if ($i == (count($materials) - 1))
+                    break;
+
+                // if not exist material
+                $check = Product::where('id', $material)->first();
+                if (!$check)
+                    return $this->error('Material not found. ID: ' . $material, 404);
+
+                // if product type another material type
+                if ($check->type == false)
+                    return $this->error('Product type another material type. ID: ' . $material, 404);
+
+                // if value null or empty
+                if (empty($values[$i]))
+                    return $this->error('Value not found. ID: ' . $material, 404);
+
+                // if count of material less than value
+                if ($check->count < $values[$i])
+                    return $this->error('Count of material less than value. ID: ' . $material, 404);
+
+                $check->count = $check->count - $values[$i];
+                $check->save();
+
+                $i++;
+            }
+
+            $product->count = $product->count + $data['count'];
+            $product->save();
+
+            DB::commit();
+
+            return $this->success('Added count of product successfully', 200);
         } catch (\Exception $e) {
             return $this->log($e);
         }
